fix: some issues starting the application and dagger pipeline adapted